# voice-chat-app

./: ._requirements.txt  ._server_dashboard.html  .gitignore  .replit  ARCHITECTURE.md  COMMERCIAL_ROADMAP.md  DEPLOYMENT_GUIDE.md  DOMAIN_UPDATE_GUIDE.md  FREE_DEPLOYMENT_GUIDE.md  README.md  SETUP_GUIDE.md  cloud_server.py  current_domain.txt  cursor_extension.js  debug_cursor_only.js  debug_test.py  debug_websocket_states.js  deploy_to_railway.py  domain_checker.py  package-lock.json  pyproject.toml  quick_test.py  railway.json  real_cursor_integration.js  requirements.txt  server_dashboard.html  setup_threewaychat.py  simple_test_server.py  test_connection_stability.js  test_cursor_send.js  test_cursor_simple.js  test_cursor_to_phone.js  test_cursor_trigger.js  test_final.py  test_final_three_way.js  test_full_three_way.js  test_local_server.js  test_phone_while_cursor_running.js  test_response.py  test_server.py  (+6 more)
ThreeWayChat/: ._ChatManager.swift  ._ContentView.swift  ._ThreeWayChatApp.swift  ChatManager.swift  ContentView.swift  ThreeWayChatApp.swift
ThreeWayChat/Voice control/: ._Voice control.xcodeproj  icon_generator.py
ThreeWayChat/Voice control/Voice control/: ._ContentView.swift  ._Voice_controlApp.swift  ContentView.swift  Info.plist  Voice_controlApp.swift
ThreeWayChat/Voice control/Voice control.xcodeproj/: ._project.xcworkspace  project.pbxproj
ThreeWayChat/Voice control/Voice controlTests/: Voice_controlTests.swift
backend/: server.py
cursor-threeway-extension/: README.md  extension.js  package-lock.json  package.json
(+4 files in other folders)
